[package]
name = "wasm_request"
version = "0.1.0"
categories = ["wasm"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features= ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
web-sys = { version = "0.3", features = ["Navigator", "FormData", "Window", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Storage"]}
js-sys = "0.3"
