[package]
name = "wasm_request"
version = "0.1.0"
description = "Create http request with rustwasm saving boilerplate"
documentation = "https://docs.rs/crate/wasm_request"
homepage = "https://github.com/dancespiele/wasm_request"
license = "MIT"
authors = ["Francisco Jesus Navarro Cortes <spieljs@gmail.com>"]
categories = ["wasm", "web-programming::http-client", "network-programming", "asynchronous"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dancespiele/wasm_request"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features= ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
web-sys = { version = "0.3", features = ["Navigator", "FormData", "Window", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Storage"]}
js-sys = "0.3"
